--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Balsamiq Sans", cursive;
+  background: #f8f8ff;
 }
 
 .header {
@@ -31,7 +32,6 @@ body {
 
 #detail {
   align-items: center;
-  margin-bottom: 30px;
   font-size: 20px;
   font-weight: 600;
 }
@@ -45,6 +45,7 @@ body {
 .map-stats {
   display: flex;
   width: 50%;
+  flex-wrap: wrap;
   margin: 0 auto;
 }
 
@@ -87,7 +88,7 @@ body {
 }
 
 .map-stats .stats.focused {
-  box-shadow: 8px 8px 6px -6px #dcdcdc;
+  box-shadow: 0px 8px 8px -8px;
   border: 1px solid;
 }
 
@@ -97,4 +98,45 @@ body {
   flex: 1;
   padding: 0.8rem;
   margin: 0.25rem 0.25rem 20px 0.25rem;
+}
+
+.meta {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.backBtn {
+  border: none;
+  padding: 5px;
+  background: #ffc10720;
+  border-radius: 5px;
+  color: #fd7e14;
+  font-weight: 600;
+  cursor: pointer;
+  outline: 1px solid;
+}
+
+@media only screen and (max-width: 600px) {
+  .map-stats {
+    width: 98%;
+  }
+  .meta {
+    width: 90%;
+  }
+  svg {
+    height: 305px;
+  }
+  .map-stats .stats {
+    padding: 10px;
+  }
+  .stats-bottom h1 {
+    font-size: 1em;
+  }
+  .map-stats .stats h5 {
+    font-size: 12px;
+  }
 }
