--- a/src/template/main.html
+++ b/src/template/main.html
@@ -1,6 +1,6 @@
 <div ng-init="OnInit()">
 
-    <div ng-include="'/src/template/map-stats.html'"></div>
+    <div ng-include="'template/map-stats.html'"></div>
 
     <div class="meta">
         <div id="detail" ng-style="{color:caseColor(caseType)}">Total</div>
